# abyss-lisp

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .markdownlint.json  CMakeLists.txt  LICENSE  README.md  abyss.asd  effects.md  meson.build
examples/: effects.abyss  fib.abyss  stlc.abyss
include/abyss/lex/: scanner.hpp  tokenize.hpp  tokens.hpp
include/abyss/parse/: nodes.hpp  parse.hpp
src/: applicatives.lisp  bench.lisp  boole.lisp  context.lisp  continuation.lisp  environment.lisp  error.lisp  evaluate.lisp  ground.lisp  handlers.lisp  helpers.lisp  lists.lisp  numbers.lisp  operatives.lisp  types.lisp  viewer.lisp
src/core/: applicatives.lisp  boole.lisp  context.lisp  error.lisp  evaluate.lisp  ground.lisp  handlers.lisp  helpers.lisp  lists.lisp  modules.lisp  numbers.lisp  operatives.lisp  print.lisp  record.lisp  types.lisp
src/ffi/: enum-gen.cpp  frontend.cpp  frontend.lisp  library.lisp
src/lex/: cli.cpp  re2c.txt  tokenize.cpp
src/parse/: cli.cpp  parse.cpp
test/: applicatives.lisp  boole.lisp  context.lisp  continuation.lisp  environment.lisp  evaluate.lisp  handlers.lisp  lists.lisp  modules.lisp  numbers.lisp  operatives.lisp  record.lisp  test.lisp
